--- a/index.html
+++ b/index.html
@@ -1,33 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <main>
-        <h1 id="title">Microverse Survey Form</h1>
-        <p id="description">Learn with students from all around the world</p>
-        <form  id="survey-form" action="">
-            <label id="name-label" for="name">Name</label>
-            <input id="name" type="text" placeholder="Name">
-            <br>
-            <label id="email-label" for="email">Email</label>
-            <input id="email" type="email" required placeholder="Email">
-            <br>
-            <label  id="number-label" for="number">Age</label>
-            <input id="number" type="number">
-            <br>
-            <label id="courses" for="courses">Choose a course</label>
-            <select name="courses" id="dropdown">
-                <option value="java script">Java Script</option>
-                <option value="css">CSS</option>
-                <option value="html">HTML</option>
-                <option value="react js">React Js</option>
-            </select>
-        </form>
+      <h1 id="title">Microverse Survey Form</h1>
+      <p id="description">Learn with students from all around the world</p>
+      <form id="survey-form" action="">
+        <label id="name-label" for="name">Name</label>
+        <input id="name" type="text" placeholder="Name" required />
+        <br />
+        <label id="email-label" for="email">Email</label>
+        <input id="email" type="email" required placeholder="Email" />
+        <br />
+        <label id="number-label" for="number">Age</label>
+        <input id="number" type="number" min="18" max="50" placeholder="Age" />
+        <br />
+        <label id="courses" for="courses">Choose a course</label>
+        <select name="courses" id="dropdown">
+          <option value="Front-end">Front-end Development</option>
+          <option value="Back-end">Back-end Development</option>
+          <option value="FullStack">FullStack Development</option>
+        </select>
+
+        <div class="button-area">
+          <p>How likely would you recommend Microverse to a friend?</p>
+          <input name="recommend" type="radio" value="Yes" id="yes" />
+          <label for="yes">Yes</label>
+          <br />
+          <input name="recommend" type="radio" value="May be" id="may-be" />
+          <label for="may-be">May be</label>
+          <br />
+          <input name="recommend" type="radio" value="No" id="no" />
+          <label for="no">No</label>
+        </div>
+        <div class="button-area">
+          <p>Which programming language do you prefer?</p>
+          <input type="checkbox" id="javaScript" value="JavaScript" />
+          <label for="javaScript">JavaScript</label>
+          <input type="checkbox" id="python" value="Python" />
+          <label for="python">Python</label>
+          <input type="checkbox" id="ruby" value="Ruby" />
+          <label for="ruby">Ruby</label>
+        </div>
+        <p>Any comments or suggestions?</p>
+        <textarea
+          name="message"
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Enter your message here..."
+        ></textarea>
+        <button id="submit">Submit</button>
+      </form>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
@@ -43,6 +72,6 @@
     - The freeCodeCamp Team
 
     -->
-    <script  src="js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
