added css styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <div id="overlay"></div>
     <main>
       <h1 id="title">Microverse Survey Form</h1>
       <p id="description">Learn with students from all around the world</p>
