--- a/index.html
+++ b/index.html
@@ -7,57 +7,77 @@
   </head>
 
   <body>
-    <div id="overlay"></div>
     <main>
-      <h1 id="title">Microverse Survey Form</h1>
-      <p id="description">Learn with students from all around the world</p>
-      <form id="survey-form" action="">
-        <label id="name-label" for="name">Name</label>
-        <input id="name" type="text" placeholder="Name" required />
-        <br />
-        <label id="email-label" for="email">Email</label>
-        <input id="email" type="email" required placeholder="Email" />
-        <br />
-        <label id="number-label" for="number">Age</label>
-        <input id="number" type="number" min="18" max="50" placeholder="Age" />
-        <br />
-        <label id="courses" for="courses">Choose a course</label>
-        <select name="courses" id="dropdown">
-          <option value="Front-end">Front-end Development</option>
-          <option value="Back-end">Back-end Development</option>
-          <option value="FullStack">FullStack Development</option>
-        </select>
+      <div id="overlay"></div>
+      <div id="main-content">
+        <h1 id="title">Microverse Survey Form</h1>
+        <p id="description">Learn with students from all around the world</p>
+        <form id="survey-form" action="">
+          <label id="name-label" for="name">Name</label>
+          <input id="name" type="text" placeholder="Name" required />
+          <br />
+          <label id="email-label" for="email">Email</label>
+          <input id="email" type="email" required placeholder="Email" />
+          <br />
+          <label id="number-label" for="number">Age</label>
+          <input
+            id="number"
+            type="number"
+            min="18"
+            max="50"
+            placeholder="Age"
+          />
+          <br />
+          <label id="courses" for="courses">Choose a course</label>
+          <select name="courses" id="dropdown">
+            <option value="Front-end">Front-end Development</option>
+            <option value="Back-end">Back-end Development</option>
+            <option value="FullStack">FullStack Development</option>
+          </select>
 
-        <div class="button-area">
-          <p>How likely would you recommend Microverse to a friend?</p>
-          <input name="recommend" type="radio" value="Yes" id="yes" />
-          <label for="yes">Yes</label>
-          <br />
-          <input name="recommend" type="radio" value="May be" id="may-be" />
-          <label for="may-be">May be</label>
-          <br />
-          <input name="recommend" type="radio" value="No" id="no" />
-          <label for="no">No</label>
-        </div>
-        <div class="button-area">
-          <p>Which programming language do you prefer?</p>
-          <input type="checkbox" id="javaScript" value="JavaScript" />
-          <label for="javaScript">JavaScript</label>
-          <input type="checkbox" id="python" value="Python" />
-          <label for="python">Python</label>
-          <input type="checkbox" id="ruby" value="Ruby" />
-          <label for="ruby">Ruby</label>
-        </div>
-        <p>Any comments or suggestions?</p>
-        <textarea
-          name="message"
-          id=""
-          cols="30"
-          rows="10"
-          placeholder="Enter your message here..."
-        ></textarea>
-        <button id="submit">Submit</button>
-      </form>
+          <div class="button-area">
+            <p>How likely would you recommend Microverse to a friend?</p>
+            <div class="radio-btn">
+              <input name="recommend" type="radio" value="Yes" id="yes" />
+              <label for="yes">Yes</label>
+            </div>
+
+            <div class="radio-btn">
+              <input name="recommend" type="radio" value="May be" id="may-be" />
+              <label for="may-be">May be</label>
+            </div>
+
+            <div class="radio-btn">
+              <input name="recommend" type="radio" value="No" id="no" />
+              <label for="no">No</label>
+            </div>
+          </div>
+          <div class="button-area">
+            <p>Which programming language do you prefer?</p>
+            <div class="radio-btn">
+              <input type="checkbox" id="javaScript" value="JavaScript" />
+              <label for="javaScript">JavaScript</label>
+            </div>
+            <div class="radio-btn">
+              <input type="checkbox" id="python" value="Python" />
+              <label for="python">Python</label>
+            </div>
+            <div class="radio-btn">
+              <input type="checkbox" id="ruby" value="Ruby" />
+              <label for="ruby">Ruby</label>
+            </div>
+          </div>
+          <p>Any comments or suggestions?</p>
+          <textarea
+            name="message"
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Enter your message here..."
+          ></textarea>
+          <button id="submit">Submit</button>
+        </form>
+      </div>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
